# html-concat

./: Cargo.toml  Makefile  README.md  _typos.toml  aops.html  aops_solution.html
fixtures/: 2005p24.html  2009p22.html  p23.html
src/: aops.rs  lib.rs  main.rs
src/snapshots/: html_concat__aops__tests__parse_html_should_work.snap
templates/: aops.html.j2
