[package]
name = "html-concat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = "0.12.1"
clap = { version = "4.4.11", features = ["derive"] }
derive_builder = "0.12.0"
html5ever = "0.26.0"
reqwest = { version = "0.11.23", default-features = false, features = [
  "rustls-tls",
  "json",
  "gzip",
] }
scraper = "0.18.1"
serde = { version = "1.0.193", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml", "redactions"] }
